[package]
name = "libp2p-lp-codec"
authors = ["José Duarte <duarte.gmj@gmail.com>"]
description = "Length-prefixed codecs for libp2p request-response protocols with optional CBOR and JSON serialization"
edition = "2021"
homepage = "https://github.com/jmg-duarte/libp2p-lp-codec"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmg-duarte/libp2p-lp-codec"
version = "0.1.0"

[features]
default = []
cbor = ["dep:cbor4ii"]
json = ["dep:serde_json"]

[dependencies]
cbor4ii = { version = "1.0.0", features = [
    "serde1",
    "use_std",
], optional = true }
serde_json = { version = "1.0.140", optional = true }

async-trait = "0.1.88"
futures = "0.3.31"
libp2p-request-response = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
unsigned-varint = "0.8.0"
